<resources>
    <string name="app_name">Garden Spy</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Create an Account</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="your_garden">Your Garden</string>
    <string name="details">Details</string>
    <string name="graphs">Graphs</string>
    <string name="current_data">Current Data</string>
    <string name="date">99/99/9999</string>
    <string name="time_fetched">Time fetched</string>
    <string name="humidity">Humidity</string>
    <string name="humlabel">humLabel</string>
    <string name="vapor">Vapor</string>
    <string name="vapLabel">vapLabel</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="time">Time</string>
    <string name="dew_point">Dew Point</string>
    <string name="dewlabel">dewLabel</string>
    <string name="saturated_vapor">Saturated Vapor</string>
    <string name="sarvaplabel">sarVapLabel</string>
    <string name="moisture">Moisture</string>
    <string name="moistlabel">moistLabel</string>
    <string name="temperature">Temperature</string>
    <string name="templabel">tempLabel</string>
    <string name="controls">Controls</string>
    <string name="settings">Settings</string>
    <string name="moisture_threshold">Moisture Threshold</string>
    <string name="edit_here">edit here</string>
    <string name="temperature_threshold">Temperature Threshold</string>
    <string name="on_threshold">On Threshold</string>
    <string name="onlabel">onLabel</string>
    <string name="off_threshold">Off Threshold</string>
    <string name="offlabel">offLabel</string>
    <string name="humidity_threshold">Humidity Threshold</string>
    <string name="humiditylabel">humidityLabel</string>
    <string name="power_on_off">Power On/Off</string>
    <string name="save_edits">Save Edits</string>
    <string name="send_email">Send Email</string>
</resources>
